--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    # Setter opp JDK 17
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    # Bygger prosjektet med Maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      
+
+    # Bygger Docker-imaget
+    - name: Build Docker image
+      run: docker build -t java-web-api:latest .
