--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,19 @@ jobs:
     - name: Run Tests with Maven
       run: mvn test --file pom.xml
 
-    - name: Log in to ACR
-      run: docker login brightstraining24fall.azurecr.io --username ${{ secrets.REGISTRY_USERNAME }} --password ${{ secrets.REGISTRY_PASSWORD }}
-
     - name: Build Docker image with unique tag
       run: |
-          VERSION_TAG=$(date +%Y%m%d%H%M%S)
-          IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}"
-          docker build -t $IMAGE_NAME .
+        VERSION_TAG=$(date +%Y%m%d%H%M%S)
+        IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}"
+        docker build -t $IMAGE_NAME .
+
+      # Log in to Azure Container Registry (ACR)
+    - name: Log in to ACR
+    - uses: docker/login-action@v2
+    - with:
+        registry: brightstraining24fall.azurecr.io
+        username: ${{ secrets.REPOSITORY_USERNAME }}
+        password: ${{ secrets.REPOSITORY_PASSWORD }}
 
     - name: Push Docker image to ACR
       run: docker push $IMAGE_NAME
