--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
       uses: docker/login-action@v2
       with:
           registry: brightstraining24fall.azurecr.io
-          username: ${{ secrets.REPOSITORY_USERNAME }}
-          password: ${{ secrets.REPOSITORY_PASSWORD }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
     - name: Push Docker image to ACR
       run: docker push $IMAGE_NAME
