--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,44 @@
-name: JAVA CI with Maven
+name: CI with Docker
 
 on:
   push:
-    branches: [main]
-  pull_request:
     branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # Setter opp JDK 17
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+      # Set up JDK 17 (hvis nødvendig)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    # Bygger prosjektet med Maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Run Tests with Maven
-      run: mvn test --file pom.xml
-
-    - name: Build Docker image with unique tag
-      run: |
-        VERSION_TAG=$(date +%Y%m%d%H%M%S)
-        IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}"
-        docker build -t $IMAGE_NAME .
+      # Build Docker image with unique tag
+      - name: Build Docker image with unique tag
+        run: |
+          VERSION_TAG=$(date +%Y%m%d%H%M%S)
+          IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}"
+          echo "${IMAGE_NAME}" > image_name.txt
+          docker build -t $IMAGE_NAME .
 
       # Log in to Azure Container Registry (ACR)
-    - name: Log in to ACR
-      uses: docker/login-action@v2
-      with:
+      - name: Log in to ACR
+        uses: docker/login-action@v2
+        with:
           registry: brightstraining24fall.azurecr.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-    - name: Push Docker image to ACR
-      run: docker push $IMAGE_NAME
+      # Push Docker image to ACR
+      - name: Push Docker image to ACR
+        run: |
+          IMAGE_NAME=$(cat image_name.txt)
+          docker push $IMAGE_NAME
