--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,20 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Log in to Azure Container Registry (ACR)
+      - name: Log in to ACR
+        uses: azure/docker-login@v1
+        with:
+          login-server: brightstraining24fall.azurecr.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
       # Build Docker image with unique tag
       - name: Build Docker image with unique tag
         run: |
@@ -29,16 +43,20 @@ jobs:
           echo "${IMAGE_NAME}" > image_name.txt
           docker build -t $IMAGE_NAME .
 
-      # Log in to Azure Container Registry (ACR)
-      - name: Log in to ACR
-        uses: docker/login-action@v2
-        with:
-          registry: brightstraining24fall.azurecr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
       # Push Docker image to ACR
       - name: Push Docker image to ACR
         run: |
           IMAGE_NAME=$(cat image_name.txt)
           docker push $IMAGE_NAME
+
+      - name: 'Deploy to Azure Container Instances'
+        uses: 'azure/aci-deploy@v1'
+        with:
+            resource-group: ${{ secrets.RESOURCE_GROUP }}
+            dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
+            image: $(cat image_name.txt)
+            registry-login-server: brightstraining24fall.azurecr.io
+            registry-username: ${{ secrets.REGISTRY_USERNAME }}
+            registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+            name: java-app
+            location: 'norway east'
