--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
         with:
@@ -37,10 +36,12 @@ jobs:
 
       # Build Docker image with unique tag
       - name: Build Docker image with unique tag
+        env:
+          VERSION_TAG: $(date +%Y%m%d%H%M%S)
         run: |
-          VERSION_TAG=$(date +%Y%m%d%H%M%S)
-          IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}"
+          IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}" 
           echo "${IMAGE_NAME}" > image_name.txt
+          echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV  # Sett den som en miljøvariabel
           docker build -t $IMAGE_NAME .
 
       # Push Docker image to ACR
@@ -54,7 +55,7 @@ jobs:
         with:
             resource-group: ${{ secrets.RESOURCE_GROUP }}
             dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-            image: $(cat image_name.txt)
+            image:  ${{ env.IMAGE_NAME }}
             registry-login-server: brightstraining24fall.azurecr.io
             registry-username: ${{ secrets.REGISTRY_USERNAME }}
             registry-password: ${{ secrets.REGISTRY_PASSWORD }}
