--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up JDK 17 (hvis nødvendig)
+      # Set up JDK 17 (if necessary)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -21,6 +21,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      # Login via Azure CLI
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
         with:
@@ -37,27 +38,26 @@ jobs:
       # Build Docker image with unique tag
       - name: Build Docker image with unique tag
         env:
-          VERSION_TAG: $(date +%Y%m%d%H%M%S)
+          VERSION_TAG: ${{ github.run_id }}  # Unique tag using GitHub run ID
         run: |
           IMAGE_NAME="brightstraining24fall.azurecr.io/bhiravina/javaapi:${VERSION_TAG}" 
-          echo "${IMAGE_NAME}" > image_name.txt
-          echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV  # Sett den som en miljøvariabel
+          echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV  # Set it as an environment variable
           docker build -t $IMAGE_NAME .
 
       # Push Docker image to ACR
       - name: Push Docker image to ACR
         run: |
-          IMAGE_NAME=$(cat image_name.txt)
-          docker push $IMAGE_NAME
+          docker push ${{ env.IMAGE_NAME }}
 
+      # Deploy to Azure Container Instances
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
-            resource-group: ${{ secrets.RESOURCE_GROUP }}
-            dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-            image:  ${{ env.IMAGE_NAME }}
-            registry-login-server: brightstraining24fall.azurecr.io
-            registry-username: ${{ secrets.REGISTRY_USERNAME }}
-            registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-            name: java-app
-            location: 'norway east'
+          resource-group: ${{ secrets.RESOURCE_GROUP }}
+          dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
+          image: ${{ env.IMAGE_NAME }}
+          registry-login-server: brightstraining24fall.azurecr.io
+          registry-username: ${{ secrets.REGISTRY_USERNAME }}
+          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+          name: java-app
+          location: 'norway east'
