--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       # Login via Azure CLI
       - name: 'Login via Azure CLI'
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -50,14 +50,10 @@ jobs:
           docker push ${{ env.IMAGE_NAME }}
 
       # Deploy to Azure Container Instances
-      - name: 'Deploy to Azure Container Instances'
-        uses: 'azure/aci-deploy@v1'
+      - name: 'Deploy to Azure Container'
+        uses: 'azure/container-apps-deploy-action@v1'
         with:
-          resource-group: ${{ secrets.RESOURCE_GROUP }}
-          dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-          image: ${{ env.IMAGE_NAME }}
-          registry-login-server: brightstraining24fall.azurecr.io
-          registry-username: ${{ secrets.REGISTRY_USERNAME }}
-          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+          resourceGroup: rg-bhiravina-ops-1
+          imageToDeploy: ${{ env.IMAGE_NAME }}
           name: java-app
           location: 'norway east'
