--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,6 @@ jobs:
         with:
           resourceGroup: rg-bhiravina-ops-1
           containerAppName: java-web-api-proff
+          containerAppEnvironment: env-bhiravina-01
           imageToDeploy: ${{ env.IMAGE_NAME }}
           location: 'norway east'
